# routes/api.php
@@ -1,5 +1,6 @@
 <?php
 
+use App\Http\Controllers\HHController;
 use App\Http\Controllers\PostController;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
@@ -18,12 +19,14 @@ use Illuminate\Support\Facades\Route;
 Route::middleware('auth:sanctum')->get('/user', function (Request $request) {
     return $request->user();
 });
+Route::group(['prefix' => 'posts'], function () {
+    Route::post('create', [PostController::class, 'create'])->name('createPost');
+    Route::get('{id}', [PostController::class, 'get'])->name('getPost');
+    Route::post('', [PostController::class, 'getAll'])->name('getAllPost');
+    Route::delete('{id}', [PostController::class, 'delete'])->name('deletePost');
+    Route::patch('{id}', [PostController::class, 'patch'])->name('patchPost');
+    Route::post('posts:search', [PostController::class, 'search'])->name('searchPost');
+});
 
-Route::post('posts/create', [PostController::class, 'create'])->name('createPost');
-Route::get('posts/{id}', [PostController::class, 'get'])->name('getPost');
-Route::post('posts', [PostController::class, 'getAll'])->name('getAllPost');
-Route::delete('posts/{id}', [PostController::class, 'delete'])->name('deletePost');
-Route::patch('posts/{id}', [PostController::class, 'patch'])->name('patchPost');
-Route::post('posts:search', [PostController::class, 'search'])->name('searchPost');
-
+Route::get('getEmployer',[HHController::class,'getEmployer'])->name('getEmployer');
 Route::post('suggests:search', [PostController::class, 'searchByElastic'])->name('searchByElastic');;
